@@ -1,5 +1,9 @@
 2010-05-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
+	* IsolatedStorageFileTest.cs: New test case for CopyFile.
+
+2010-05-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
 	* IsolatedStorageFileTest.cs: New test case for GetCreationTime.
 
 2010-05-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>
